--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
               </div>
 
               <div class="ganre-wrapper">
-                <a href="#">Romance,</a>
+                <a href="#">Тима,</a>
 
                 <a href="#">Drama</a>
               </div>
